[gd_scene load_steps=2 format=3 uid="uid://cvcc28vddyv44"]

[ext_resource type="Script" uid="uid://csh0fhco3lifj" path="res://scenes/creation_personnage/personnalisation.gd" id="1_wdlnn"]

[node name="Frame" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_wdlnn")

[node name="Arri√®re-plan" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.258824, 0.580392, 0.564706, 1)

[node name="titre" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.053
anchor_right = 0.5
anchor_bottom = 0.053
offset_left = -20.0
offset_right = 20.0
offset_bottom = 23.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 50
text = "Personnalisation des options"

[node name="retour" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.084
anchor_top = 0.895
anchor_right = 0.084
anchor_bottom = 0.895
offset_top = -31.0
offset_right = 61.0
grow_vertical = 0
theme_override_font_sizes/font_size = 35
text = "Retour"

[node name="races" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.211
anchor_top = 0.5
anchor_right = 0.211
anchor_bottom = 0.5
offset_top = -15.5
offset_right = 156.0
offset_bottom = 15.5
grow_vertical = 2
theme_override_font_sizes/font_size = 35
text = "Ajouter des races..."

[node name="classes" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.842
anchor_top = 0.5
anchor_right = 0.842
anchor_bottom = 0.5
offset_left = -359.0
offset_top = -28.5
offset_bottom = 28.5
grow_horizontal = 0
grow_vertical = 2
theme_override_font_sizes/font_size = 35
text = "Ajouter des classes..."

[node name="historiques" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.726
anchor_right = 0.5
anchor_bottom = 0.726
offset_left = -200.5
offset_top = -57.0
offset_right = 200.5
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 35
text = "Ajouter des historiques"

[node name="FileDialog" type="FileDialog" parent="."]
title = "Ouvrez des fichiers..."
ok_button_text = "Ouvrir"
cancel_button_text = "Annuler"
file_mode = 1
access = 2

[connection signal="pressed" from="retour" to="." method="_on_retour_pressed"]
[connection signal="pressed" from="races" to="." method="_on_races_pressed"]
[connection signal="pressed" from="classes" to="." method="_on_classes_pressed"]
[connection signal="pressed" from="historiques" to="." method="_on_historiques_pressed"]
[connection signal="files_selected" from="FileDialog" to="." method="_on_files_selected"]
